finally figure out problem

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -19,19 +19,19 @@
         <meta name="title" property="og:title" content="Welcome to Delfai Oracle">
         <meta name="url" property="og:url" content="https://delfai.web.app/about">
         <meta name="description" property="og:description" content="A web app for Tarot lovers! Get instant readings for any question.">
-        <meta name="image" property="og:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <meta name="image" property="og:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- twitter meta tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@delfaioracle">
         <meta name="twitter:title" content="Welcome to Delfai Oracle">
         <meta name="twitter:description" content="A web app for Tarot lovers! Get instant readings for any question.">
-        <meta name="twitter:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <meta name="twitter:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- end meta tags -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="manifest" href="/home/site.webmanifest">
+        <link rel="mask-icon" href="/home/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -57,13 +57,13 @@
                     </h1>
                     <div class="social" style="margin-top: 10px">
                         <a href="https://tiktok.com/@delfaioracle" target="_blank" rel="noopener">
-                            <img src="/assets/icons/social/tiktok.png" alt="TikTok logo"/>
+                            <img src="/home/assets/icons/social/tiktok.png" alt="TikTok logo"/>
                         </a>
                         <a href="https://instagram.com/delfaioracle" target="_blank" rel="noopener">
-                            <img src="/assets/icons/social/instagram.png" alt="Instagram logo"/>
+                            <img src="/home/assets/icons/social/instagram.png" alt="Instagram logo"/>
                         </a>
                         <a href="https://x.com/delfaioracle" target="_blank" rel="noopener">
-                            <img src="/assets/icons/social/x.png" alt ="X logo"/>
+                            <img src="/home/assets/icons/social/x.png" alt ="X logo"/>
                         </a>
                     </div>
                     <button class="standard-btn" onclick="window.location.href='/home'">LOG IN</a>
@@ -93,7 +93,7 @@
                         </tr>
                         <tr>
                             <td>
-                                6 cards for <a href="/assets/wheel.png" target="_blank" rel="noopener">the current date</a>
+                                6 cards for <a href="/home/assets/wheel.png" target="_blank" rel="noopener">the current date</a>
                             </td>
                             <td>cards for any date</td>
                         </tr>
@@ -120,9 +120,11 @@
                     </tbody>
                 </table>
 
-                <a class="link-btn" href="/">Sign up for your FREE instant reading today!</a>
+                <button class="standard-btn" onclick="window.location.href='/home'">
+                    Sign up for your FREE instant reading today!
+                </button>
 
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+                <img class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
                 <div id="disclaimer">
                     <h4 style="margin:0 auto 12px">Disclaimer</h4>
@@ -133,7 +135,7 @@
                     </p>
                 </div>
 
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+                <img class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
                 <p id="copyright">&copy; Alec Fernandes 2023</p>
             </div>
