--- a/deploy/kabbalah/index.html
+++ b/deploy/kabbalah/index.html
@@ -19,13 +19,13 @@
         <meta name="title" property="og:title" content="Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle">
         <meta name="url" property="og:url" content="https://delfai.web.app">
         <meta name="description" property="og:description" content="Learn the correct way to assign Major Arcana Tarot cards to the Tree of Life, according to traditional Kabbalah.">
-        <meta name="image" property="og:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <meta name="image" property="og:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- twitter meta tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@delfaioracle">
         <meta name="twitter:title" content="Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle">
         <meta name="twitter:description" content="Learn the correct way to assign Major Arcana Tarot cards to the Tree of Life, according to traditional Kabbalah.">
-        <meta name="twitter:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <meta name="twitter:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- end meta tags -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -75,13 +75,13 @@
                 <nav>
                     <div class="social">
                         <a href="https://tiktok.com/@delfaioracle" target="_blank" rel="noopener">
-                            <img src="/assets/icons/social/tiktok.png" alt="TikTok logo"/>
+                            <img src="/home/assets/icons/social/tiktok.png" alt="TikTok logo"/>
                         </a>
                         <a href="https://instagram.com/delfaioracle" target="_blank" rel="noopener">
-                            <img src="/assets/icons/social/instagram.png" alt="Instagram logo"/>
+                            <img src="/home/assets/icons/social/instagram.png" alt="Instagram logo"/>
                         </a>
                         <a href="https://x.com/delfaioracle" target="_blank" rel="noopener">
-                            <img src="/assets/icons/social/x.png" alt ="X logo"/>
+                            <img src="/home/assets/icons/social/x.png" alt ="X logo"/>
                         </a>
                     </div>
                     <a href="/">home</a>
@@ -91,9 +91,9 @@
                     <a href="#worlds">worlds</a>
                 </nav>
 
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+                <img class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
-                <p>The <a href="https://en.wikipedia.org/wiki/Hermetic_Order_of_the_Golden_Dawn" target="_blank" rel="noopener">Order of the Golden Dawn</a> greatly expanded the esoteric symbolism of Tarot cards. Their system of the <a href="/assets/wheel.png" target="_blank" rel="noopener">decan calendar wheel</a> and how they assigned cards to Kabbalah's Tree of Life gave the deck a much deeper spiritual meaning. While I respect this group dearly, I do believe they made one key error with the Tree of Life.</p>
+                <p>The <a href="https://en.wikipedia.org/wiki/Hermetic_Order_of_the_Golden_Dawn" target="_blank" rel="noopener">Order of the Golden Dawn</a> greatly expanded the esoteric symbolism of Tarot cards. Their system of the <a href="/home/assets/wheel.png" target="_blank" rel="noopener">decan calendar wheel</a> and how they assigned cards to Kabbalah's Tree of Life gave the deck a much deeper spiritual meaning. While I respect this group dearly, I do believe they made one key error with the Tree of Life.</p>
 
                 <p>In Kabbalistic Tarot, the 22 Major Arcana cards match the 22 letters of the Hebrew alphabet in sequence. The Order of the Golden Dawn assigned the Major Arcana cards and their Hebrew letters to the paths between spheres &mdash; or "sefirot" &mdash; on the Tree of Life starting from the top down, in fairly strict order. These paths, however, do not align with the traditional Tree of Life in Jewish mysticism.</p>
 
@@ -107,7 +107,7 @@
 
                 <p>These are very technical distinctions, but I believe they are important. In an era when we are actively addressing cultural appropriation, it’s vital to realign Tarot with traditional Kabbalah as practiced by the Jewish people, and not the Kabbalah adopted and warped by Western outsiders at the turn of the 20th century.</p>
 
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+                <img class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
                 <h2 id="sefirot">Sefirot of the Tree of Life</h2>
 
@@ -146,7 +146,7 @@
                             <tr><td>world</td><td><a href="#${val.world.toLowerCase()}">${val.world}</a></td></tr>
                         </table>
                     </div>
-                    <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+                    <img class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
                 `)
                 .join("");
 
@@ -168,7 +168,7 @@
                             <tr><td>court cards</td><td>${val.court}</td></tr>
                         </table>
                     </div>
-                    <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+                    <img class="separator" src="/home/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
                 `})
                 .join("");
 
