--- a/public/index.html
+++ b/public/index.html
@@ -19,26 +19,26 @@
         <meta name="title" property="og:title" content="Delfai Oracle">
         <meta name="url" property="og:url" content="https://delfai.web.app">
         <meta name="description" property="og:description" content="A web app for Tarot lovers! Get instant readings for any question.">
-        <meta name="image" property="og:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <meta name="image" property="og:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- twitter meta tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@delfaioracle">
         <meta name="twitter:title" content="Delfai Oracle">
         <meta name="twitter:description" content="A web app for Tarot lovers! Get instant readings for any question.">
-        <meta name="twitter:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <meta name="twitter:image" content="https://delfai.web.app/home/assets/social-share.jpg">
         <!-- end meta tags -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="site.webmanifest">
-        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="180x180" href="/home/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/home/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/home/favicon-16x16.png">
+        <link rel="manifest" href="/home/site.webmanifest">
+        <link rel="mask-icon" href="/home/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
-        <link rel="stylesheet" href="/css/social.css">
-        <link rel="stylesheet" href="/css/tol.css">
-        <link rel="stylesheet" href="/css/scroll-cards.css">
+        <link rel="stylesheet" href="/home/css/social.css">
+        <link rel="stylesheet" href="/home/css/tol.css">
+        <link rel="stylesheet" href="/home/css/scroll-cards.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -53,6 +53,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-        <script src="/scrolling-cards.js"></script>
+        <script src="/home/scrolling-cards.js"></script>
     </body>
 </html>
