complete component restructuring

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -37,9 +37,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/home/css/style.css">
-        <link rel="stylesheet" href="/home/css/landing.css">
         <link rel="stylesheet" href="/home/css/social.css">
         <link rel="stylesheet" href="/home/css/scroll-cards.css">
+        <link rel="stylesheet" href="/css/landing.css">
+        <link rel="stylesheet" href="/css/static.css">
     </head>
     <body>
         <header style="z-index:0">
@@ -69,7 +70,7 @@
                     <button class="log-in-btn standard-btn">LOG IN</a>
                 </nav>
 
-                <div id="intro" style="margin:20px auto 0">
+                <div id="intro">
                     <p>                        
                         A web app for Tarot lovers!
                         <br/>
