--- a/deploy/kabbalah/index.html
+++ b/deploy/kabbalah/index.html
@@ -39,6 +39,7 @@
         <link rel="stylesheet" href="/home/css/style.css">
         <link rel="stylesheet" href="/home/css/tol.css">
         <link rel="stylesheet" href="/home/css/social.css">
+        <link rel="stylesheet" href="/css/static.css">
         <style>
             table {
                 width: 230px;
