deploy new layout

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -145,7 +145,7 @@
         <script src="/home/scrolling-cards.js"></script>
 
         <script>
-            const IS_DEVELOPMENT = true;
+            const IS_DEVELOPMENT = false;
             [...document.querySelectorAll(".log-in-btn")].forEach(elem => {
                 elem.onclick = () => window.location.href = `${IS_DEVELOPMENT
                     ? "http://localhost:3000"
