--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-        <script src="/home/scrolling-cards.js"></script>
+        <script src="/home/scrolling-cards.js" defer></script>
     </body>
 </html>
