add static footer

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -218,6 +218,41 @@
             </div>
         </main>
 
+        <footer>
+            <div id="footer-container">
+                <ul>
+                    <li>
+                        <a>Subscribe</a>
+                    &nbsp; | &nbsp;
+                    <a href="/#refunds">Refund Policy</a>
+                    </li>
+                    <li>
+                        <a href="/#privacy">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="/#disclaimer">Disclaimer</a>
+                    </li>
+                    <li>
+                        <a href="/#contact">Contact</a>
+                    </li>
+                    <li>
+                    &copy; <a href="https://fern.haus" target="_blank" rel="noopener">Fern Haus</a>
+                    </li>
+                </ul>
+                <div class="social">
+                    <a href="https://tiktok.com/@delfaioracle" target="_blank" rel="noopener">
+                        <img src="/home/assets/icons/social/tiktok.png" alt="TikTok logo"/>
+                    </a>
+                    <a href="https://instagram.com/delfaioracle" target="_blank" rel="noopener">
+                        <img src="/home/assets/icons/social/instagram.png" alt="Instagram logo"/>
+                    </a>
+                    <a href="https://x.com/delfaioracle" target="_blank" rel="noopener">
+                        <img src="/home/assets/icons/social/x.png" alt ="X logo"/>
+                    </a>
+                </div>
+            </div>
+        </footer>
+
         <script src="/home/scrolling-cards.js" defer></script>
 
         <script>
