move footer css into separate file

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -39,6 +39,7 @@
         <link rel="stylesheet" href="/home/css/style.css">
         <link rel="stylesheet" href="/home/css/social.css">
         <link rel="stylesheet" href="/home/css/scroll-cards.css">
+        <link rel="stylesheet" href="/home/css/footer.css">
         <link rel="stylesheet" href="/css/landing.css">
         <link rel="stylesheet" href="/css/static.css">
     </head>
@@ -236,7 +237,7 @@
                         <a href="/#contact">Contact</a>
                     </li>
                     <li>
-                    &copy; <a href="https://fern.haus" target="_blank" rel="noopener">Fern Haus</a>
+                        <a href="/">Home</a> &nbsp;|&nbsp; <a href="/kabbalah">Kabbalah</a> &nbsp;|&nbsp; <a href="https://fern.haus" target="_blank" rel="noopener">&copy; Fern Haus</a>
                     </li>
                 </ul>
                 <div class="social">
