--- a/deploy/kabbalah/index.html
+++ b/deploy/kabbalah/index.html
@@ -39,6 +39,7 @@
         <link rel="stylesheet" href="/home/css/style.css">
         <link rel="stylesheet" href="/home/css/tol.css">
         <link rel="stylesheet" href="/home/css/social.css">
+        <link rel="stylesheet" href="/home/css/footer.css">
         <link rel="stylesheet" href="/css/static.css">
         <style>
             table {
@@ -117,10 +118,43 @@
                 <h2 id="worlds">Worlds of the Tree of Life</h2>
 
                 <div id="worlds-info"></div>
-
-                <p id="copyright">© Alec Fernandes 2023</p>
             </div>
         </main>
+
+        <footer>
+            <div id="footer-container">
+                <ul>
+                    <li>
+                        <a>Subscribe</a>
+                    &nbsp; | &nbsp;
+                    <a href="/#refunds">Refund Policy</a>
+                    </li>
+                    <li>
+                        <a href="/#privacy">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="/#disclaimer">Disclaimer</a>
+                    </li>
+                    <li>
+                        <a href="/#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/">Home</a> &nbsp;|&nbsp; <a href="/kabbalah">Kabbalah</a> &nbsp;|&nbsp; <a href="https://fern.haus" target="_blank" rel="noopener">&copy; Fern Haus</a>
+                    </li>
+                </ul>
+                <div class="social">
+                    <a href="https://tiktok.com/@delfaioracle" target="_blank" rel="noopener">
+                        <img src="/home/assets/icons/social/tiktok.png" alt="TikTok logo"/>
+                    </a>
+                    <a href="https://instagram.com/delfaioracle" target="_blank" rel="noopener">
+                        <img src="/home/assets/icons/social/instagram.png" alt="Instagram logo"/>
+                    </a>
+                    <a href="https://x.com/delfaioracle" target="_blank" rel="noopener">
+                        <img src="/home/assets/icons/social/x.png" alt ="X logo"/>
+                    </a>
+                </div>
+            </div>
+        </footer>
 
         <script type="module">
             import TreeOfLife from "./scripts/TreeOfLife.js";
