--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         <link rel="stylesheet" href="/home/css/social.css">
         <link rel="stylesheet" href="/home/css/style.css">
         <link rel="stylesheet" href="/home/css/tol.css">
+        <link rel="stylesheet" href="/home/css/footer.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
